module(
    name = "rails_example",
    version = "0.0.0",
)

# bazel_dep(name = "rules_shell", version = "0.5.0")
# bazel_dep(name = "aspect_rules_lint", version = "1.5.1")
# bazel_dep(name = "aspect_rules_js", version = "2.4.0")
# bazel_dep(name = "gazelle", version = "0.44.0")
# bazel_dep(
#     name = "bazel_skylib_gazelle_plugin",
#     version = "1.8.1",
# )
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.27.0",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
)
bazel_dep(name = "rules_multitool", version = "1.7.0")
bazel_dep(name = "rules_ruby", version = "0.0.0")
local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

bazel_dep(
    name = "bazel_env.bzl",
    version = "0.5.0",
    dev_dependency = True,
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    # ruby-build is used to download CRuby
    # https://github.com/rbenv/ruby-build
    ruby_build_version = "20250724",
    version_file = "//:.ruby-version",
)
ruby.bundle_fetch(
    name = "root_bundle",
    gem_checksums = {
        "actioncable-8.0.2.1": "6f1cb20db39fba28a93569e8d5dab42b2749d7ddd4baebb5bbecd4217e49d6a2",
        "actionmailbox-8.0.2.1": "8ea8c6e31e448961c06fc1d6282775b32aff1c009f232d4564e07e54850a6cad",
        "actionmailer-8.0.2.1": "0de14d8d04541eab130858cb2f0697266be42de1afe1104bc43d7998137ddb9c",
        "actionpack-8.0.2.1": "61e7e11a31dbe5152ca57221788bdca42ef302c4cc53b4c8993d68dce8982b0a",
        "actiontext-8.0.2.1": "0cc4b3b5cfb9d915c6697b05b013dad7f4eaf074d9989700b6a0a55cf620d6b8",
        "actionview-8.0.2.1": "2ea6d20ccb0b7b84a221a940ac06853ce99235e4ecb4947815839c7c5ecbf347",
        "activejob-8.0.2.1": "d6e5f2da07ec8efac13a38af1752416770dc74e95783f7b252506d707aa32b89",
        "activemodel-8.0.2.1": "17bab6cdb86531844113df22f864480a89a276bf0318246e628f99e0ac077ec4",
        "activerecord-8.0.2.1": "a6556e7bdd53f3889d18d2aa3a7ff115fd6c5e1463dd06f97fb88d06b58c6df1",
        "activestorage-8.0.2.1": "43bb3d9e115471e201e6a66813810c1d15b607a321f29d62efdf9d90ffaf76f8",
        "activesupport-8.0.2.1": "0405a76fd1ca989975d9ae00d46a4d3979bdf3817482d846b63affa84bd561c6",
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "benchmark-0.4.1": "d4ef40037bba27f03b28013e219b950b82bace296549ec15a78016552f8d2cce",
        "bigdecimal-3.2.2": "39085f76b495eb39a79ce07af716f3a6829bc35eb44f2195e2753749f2fa5adc",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "concurrent-ruby-1.3.5": "813b3e37aca6df2a21a3b9f1d497f8cbab24a2b94cab325bffe65ee0f6cbebc6",
        "connection_pool-2.5.3": "cfd74a82b9b094d1ce30c4f1a346da23ee19dc8a062a16a85f58eab1ced4305b",
        "crass-1.0.6": "dc516022a56e7b3b156099abc81b6d2b08ea1ed12676ac7a5657617f012bd45d",
        "date-3.4.1": "bf268e14ef7158009bfeaec40b5fa3c7271906e88b196d958a89d4b408abe64f",
        "drb-2.2.3": "0b00d6fdb50995fe4a45dea13663493c841112e4068656854646f418fda13373",
        "erb-5.0.2": "d30f258143d4300fb4ecf430042ac12970c9bb4b33c974a545b8f58c1ec26c0f",
        "erubi-1.13.1": "a082103b0885dbc5ecf1172fede897f9ebdb745a4b97a5e8dc63953db1ee4ad9",
        "globalid-1.2.1": "70bf76711871f843dbba72beb8613229a49429d1866828476f9c9d6ccc327ce9",
        "i18n-1.14.7": "ceba573f8138ff2c0915427f1fc5bdf4aa3ab8ae88c8ce255eb3ecf0a11a5d0f",
        "io-console-0.8.1": "1e15440a6b2f67b6ea496df7c474ed62c860ad11237f29b3bd187f054b925fcb",
        "irb-1.15.2": "222f32952e278da34b58ffe45e8634bf4afc2dc7aa9da23fed67e581aa50fdba",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "loofah-2.24.1": "655a30842b70ec476410b347ab1cd2a5b92da46a19044357bbd9f401b009a337",
        "mail-2.8.1": "ec3b9fadcf2b3755c78785cb17bc9a0ca9ee9857108a64b6f5cfc9c0b5bfc9ad",
        "marcel-1.0.4": "0d5649feb64b8f19f3d3468b96c680bae9746335d02194270287868a661516a4",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "minitest-5.25.5": "391b6c6cb43a4802bfb7c93af1ebe2ac66a210293f4a3fb7db36f2fc7dc2c756",
        "net-imap-0.5.9": "d95905321e1bd9f294ffc7ff8697be218eee1ec96c8504c0960964d0a0be33fc",
        "net-pop-0.1.2": "848b4e982013c15b2f0382792268763b748cce91c9e91e36b0f27ed26420dff3",
        "net-protocol-0.2.2": "aa73e0cba6a125369de9837b8d8ef82a61849360eba0521900e2c3713aa162a8",
        "net-smtp-0.5.1": "ed96a0af63c524fceb4b29b0d352195c30d82dd916a42f03c62a3a70e5b70736",
        "nio4r-2.7.4": "d95dee68e0bb251b8ff90ac3423a511e3b784124e5db7ff5f4813a220ae73ca9",
        "nokogiri-1.18.9-aarch64-linux-gnu": "5bcfdf7aa8d1056a7ad5e52e1adffc64ef53d12d0724fbc6f458a3af1a4b9e32",
        "nokogiri-1.18.9-aarch64-linux-musl": "55e9e6ca46c4ad1715e313f407d8481d15be1e3b65d9f8e52ba1c124d01676a7",
        "nokogiri-1.18.9-arm-linux-gnu": "fe611ae65880e445a9c0f650d52327db239f3488626df4173c05beafd161d46e",
        "nokogiri-1.18.9-arm-linux-musl": "935605e14c0ba17da18d203922440bf6c0676c602659278d855d4622d756a324",
        "nokogiri-1.18.9-arm64-darwin": "eea3f1f06463ff6309d3ff5b88033c4948d0da1ab3cc0a3a24f63c4d4a763979",
        "nokogiri-1.18.9-x86_64-darwin": "e0d2deb03d3d7af8016e8c9df5ff4a7d692159cefb135cbb6a4109f265652348",
        "nokogiri-1.18.9-x86_64-linux-gnu": "b52f5defedc53d14f71eeaaf990da66b077e1918a2e13088b6a96d0230f44360",
        "nokogiri-1.18.9-x86_64-linux-musl": "e69359d6240c17e64cc9f43970d54f13bfc7b8cc516b819228f687e953425e69",
        "pp-0.6.2": "947ec3120c6f92195f8ee8aa25a7b2c5297bb106d83b41baa02983686577b6ff",
        "prettyprint-0.2.0": "2bc9e15581a94742064a3cc8b0fb9d45aae3d03a1baa6ef80922627a0766f193",
        "psych-5.2.6": "814328aa5dcb6d604d32126a20bc1cbcf05521a5b49dbb1a8b30a07e580f316e",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "rack-3.2.0": "79cd21514d696c59d61fae02e62900f087aac2d053fdc77d45f4e91b94fb3612",
        "rack-session-2.1.1": "0b6dc07dea7e4b583f58a48e8b806d4c9f1c6c9214ebc202ec94562cbea2e4e9",
        "rack-test-2.2.0": "005a36692c306ac0b4a9350355ee080fd09ddef1148a5f8b2ac636c720f5c463",
        "rackup-2.2.1": "f737191fd5c5b348b7f0a4412a3b86383f88c43e13b8217b63d4c8d90b9e798d",
        "rails-8.0.2.1": "13ab95615569e74e364384b346b1d83e4795dbde83d9edf584e8768e8049b3ac",
        "rails-dom-testing-2.3.0": "8acc7953a7b911ca44588bf08737bc16719f431a1cc3091a292bca7317925c1d",
        "rails-html-sanitizer-1.6.2": "35fce2ca8242da8775c83b6ba9c1bcaad6751d9eb73c1abaa8403475ab89a560",
        "railties-8.0.2.1": "54e40e1771fc2878f572d5a4e076cddb057ba8d4d471f8b7d9bfc61bc1301d4c",
        "rake-13.3.0": "96f5092d786ff412c62fde76f793cc0541bd84d2eb579caa529aa8a059934493",
        "rdoc-6.14.2": "9fdd44df130f856ae70cc9a264dfd659b9b40de369b16581f4ab746e42439226",
        "reline-0.6.2": "1dad26a6008872d59c8e05244b119347c9f2ddaf4a53dce97856cd5f30a02846",
        "securerandom-0.4.1": "cc5193d414a4341b6e225f0cb4446aceca8e50d5e1888743fac16987638ea0b1",
        "stringio-3.1.7": "5b78b7cb242a315fb4fca61a8255d62ec438f58da2b90be66048546ade4507fa",
        "thor-1.4.0": "8763e822ccb0f1d7bee88cde131b19a65606657b847cc7b7b4b82e772bcd8a3d",
        "timeout-0.4.3": "9509f079b2b55fe4236d79633bd75e34c1c1e7e3fb4b56cb5fda61f80a0fe30e",
        "tzinfo-2.0.6": "8daf828cc77bcf7d63b0e3bdb6caa47e2272dcfaf4fbfe46f8c3a9df087a829b",
        "uri-1.0.3": "e9f2244608eea2f7bc357d954c65c910ce0399ca5e18a7a29207ac22d8767011",
        "useragent-0.16.11": "700e6413ad4bb954bb63547fa098dddf7b0ebe75b40cc6f93b8d54255b173844",
        "websocket-driver-0.8.0": "ed0dba4b943c22f17f9a734817e808bc84cdce6a7e22045f5315aa57676d4962",
        "websocket-extensions-0.1.5": "1c6ba63092cda343eb53fc657110c71c754c56484aad42578495227d717a8241",
        "zeitwerk-2.7.3": "b2e86b4a9b57d26ba68a15230dcc7fe6f040f06831ce64417b0621ad96ba3e85",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
ruby.bundle_fetch(
    name = "people_tracker_bundle",
    gem_checksums = {
        "actioncable-8.0.2.1": "6f1cb20db39fba28a93569e8d5dab42b2749d7ddd4baebb5bbecd4217e49d6a2",
        "actionmailbox-8.0.2.1": "8ea8c6e31e448961c06fc1d6282775b32aff1c009f232d4564e07e54850a6cad",
        "actionmailer-8.0.2.1": "0de14d8d04541eab130858cb2f0697266be42de1afe1104bc43d7998137ddb9c",
        "actionpack-8.0.2.1": "61e7e11a31dbe5152ca57221788bdca42ef302c4cc53b4c8993d68dce8982b0a",
        "actiontext-8.0.2.1": "0cc4b3b5cfb9d915c6697b05b013dad7f4eaf074d9989700b6a0a55cf620d6b8",
        "actionview-8.0.2.1": "2ea6d20ccb0b7b84a221a940ac06853ce99235e4ecb4947815839c7c5ecbf347",
        "activejob-8.0.2.1": "d6e5f2da07ec8efac13a38af1752416770dc74e95783f7b252506d707aa32b89",
        "activemodel-8.0.2.1": "17bab6cdb86531844113df22f864480a89a276bf0318246e628f99e0ac077ec4",
        "activerecord-8.0.2.1": "a6556e7bdd53f3889d18d2aa3a7ff115fd6c5e1463dd06f97fb88d06b58c6df1",
        "activestorage-8.0.2.1": "43bb3d9e115471e201e6a66813810c1d15b607a321f29d62efdf9d90ffaf76f8",
        "activesupport-8.0.2.1": "0405a76fd1ca989975d9ae00d46a4d3979bdf3817482d846b63affa84bd561c6",
        "addressable-2.8.7": "462986537cf3735ab5f3c0f557f14155d778f4b43ea4f485a9deb9c8f7c58232",
        "ast-2.4.3": "954615157c1d6a382bc27d690d973195e79db7f55e9765ac7c481c60bdb4d383",
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "bcrypt-3.1.20": "8410f8c7b3ed54a3c00cd2456bf13917d695117f033218e2483b2e40b0784099",
        "bcrypt_pbkdf-1.1.1": "2f9077dde837d1f0dd2eb0f9e5327c6871c68ebc8eba88870fb6b7956e1e2b13",
        "benchmark-0.4.1": "d4ef40037bba27f03b28013e219b950b82bace296549ec15a78016552f8d2cce",
        "bigdecimal-3.2.2": "39085f76b495eb39a79ce07af716f3a6829bc35eb44f2195e2753749f2fa5adc",
        "bindex-0.8.1": "7b1ecc9dc539ed8bccfc8cb4d2732046227b09d6f37582ff12e50a5047ceb17e",
        "bootsnap-1.18.6": "0ae2393c1e911e38be0f24e9173e7be570c3650128251bf06240046f84a07d00",
        "brakeman-7.1.0": "bbc708a75a53008490c8b9600b97fa85cb3d5a8818dd1560f18e0b89475d48af",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "cancancan-3.6.1": "975c1d5cbf58d5df48a9452a7f61ae3d254608cd87570402f5925a8864c56b62",
        "capybara-3.40.0": "42dba720578ea1ca65fd7a41d163dd368502c191804558f6e0f71b391054aeef",
        "concurrent-ruby-1.3.5": "813b3e37aca6df2a21a3b9f1d497f8cbab24a2b94cab325bffe65ee0f6cbebc6",
        "connection_pool-2.5.3": "cfd74a82b9b094d1ce30c4f1a346da23ee19dc8a062a16a85f58eab1ced4305b",
        "crass-1.0.6": "dc516022a56e7b3b156099abc81b6d2b08ea1ed12676ac7a5657617f012bd45d",
        "date-3.4.1": "bf268e14ef7158009bfeaec40b5fa3c7271906e88b196d958a89d4b408abe64f",
        "debug-1.11.0": "1425db64cfa0130c952684e3dc974985be201dd62899bf4bbe3f8b5d6cf1aef2",
        "devise-4.9.4": "920042fe5e704c548aa4eb65ebdd65980b83ffae67feb32c697206bfd975a7f8",
        "dotenv-3.1.8": "9e1176060ced581f8e6ce4384e91361817763a76e3c625c8bddc18b35bd392c3",
        "drb-2.2.3": "0b00d6fdb50995fe4a45dea13663493c841112e4068656854646f418fda13373",
        "ed25519-1.4.0": "16e97f5198689a154247169f3453ef4cfd3f7a47481fde0ae33206cdfdcac506",
        "erb-5.0.2": "d30f258143d4300fb4ecf430042ac12970c9bb4b33c974a545b8f58c1ec26c0f",
        "erubi-1.13.1": "a082103b0885dbc5ecf1172fede897f9ebdb745a4b97a5e8dc63953db1ee4ad9",
        "et-orbi-1.3.0": "56716ce1c40f56412d6acb0721ebede6bd23b66525dab008a95d77df00c7d260",
        "fugit-1.11.1": "e89485e7be22226d8e9c6da411664d0660284b4b1c08cacb540f505907869868",
        "globalid-1.2.1": "70bf76711871f843dbba72beb8613229a49429d1866828476f9c9d6ccc327ce9",
        "i18n-1.14.7": "ceba573f8138ff2c0915427f1fc5bdf4aa3ab8ae88c8ce255eb3ecf0a11a5d0f",
        "importmap-rails-2.2.2": "729f5b1092f832780829ade1d0b46c7e53d91c556f06da7254da2977e93fe614",
        "io-console-0.8.1": "1e15440a6b2f67b6ea496df7c474ed62c860ad11237f29b3bd187f054b925fcb",
        "irb-1.15.2": "222f32952e278da34b58ffe45e8634bf4afc2dc7aa9da23fed67e581aa50fdba",
        "jbuilder-2.14.1": "4eb26376ff60ef100cb4fd6fd7533cd271f9998327e86adf20fd8c0e69fabb42",
        "json-2.13.2": "02e1f118d434c6b230a64ffa5c8dee07e3ec96244335c392eaed39e1199dbb68",
        "kamal-2.7.0": "66b863d967a740886a1817f7e181849c100dfcd4bdf1d8695d9c20828313b4f8",
        "language_server-protocol-3.17.0.5": "fd1e39a51a28bf3eec959379985a72e296e9f9acfce46f6a79d31ca8760803cc",
        "lint_roller-1.1.0": "2c0c845b632a7d172cb849cc90c1bce937a28c5c8ccccb50dfd46a485003cc87",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "loofah-2.24.1": "655a30842b70ec476410b347ab1cd2a5b92da46a19044357bbd9f401b009a337",
        "mail-2.8.1": "ec3b9fadcf2b3755c78785cb17bc9a0ca9ee9857108a64b6f5cfc9c0b5bfc9ad",
        "marcel-1.0.4": "0d5649feb64b8f19f3d3468b96c680bae9746335d02194270287868a661516a4",
        "matrix-0.4.3": "a0d5ab7ddcc1973ff690ab361b67f359acbb16958d1dc072b8b956a286564c5b",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "minitest-5.25.5": "391b6c6cb43a4802bfb7c93af1ebe2ac66a210293f4a3fb7db36f2fc7dc2c756",
        "msgpack-1.8.0": "e64ce0212000d016809f5048b48eb3a65ffb169db22238fb4b72472fecb2d732",
        "net-imap-0.5.9": "d95905321e1bd9f294ffc7ff8697be218eee1ec96c8504c0960964d0a0be33fc",
        "net-pop-0.1.2": "848b4e982013c15b2f0382792268763b748cce91c9e91e36b0f27ed26420dff3",
        "net-protocol-0.2.2": "aa73e0cba6a125369de9837b8d8ef82a61849360eba0521900e2c3713aa162a8",
        "net-scp-4.1.0": "a99b0b92a1e5d360b0de4ffbf2dc0c91531502d3d4f56c28b0139a7c093d1a5d",
        "net-sftp-4.0.0": "65bb91c859c2f93b09826757af11b69af931a3a9155050f50d1b06d384526364",
        "net-smtp-0.5.1": "ed96a0af63c524fceb4b29b0d352195c30d82dd916a42f03c62a3a70e5b70736",
        "net-ssh-7.3.0": "172076c4b30ce56fb25a03961b0c4da14e1246426401b0f89cba1a3b54bf3ef0",
        "nio4r-2.7.4": "d95dee68e0bb251b8ff90ac3423a511e3b784124e5db7ff5f4813a220ae73ca9",
        "nokogiri-1.18.9-aarch64-linux-gnu": "5bcfdf7aa8d1056a7ad5e52e1adffc64ef53d12d0724fbc6f458a3af1a4b9e32",
        "nokogiri-1.18.9-aarch64-linux-musl": "55e9e6ca46c4ad1715e313f407d8481d15be1e3b65d9f8e52ba1c124d01676a7",
        "nokogiri-1.18.9-arm-linux-gnu": "fe611ae65880e445a9c0f650d52327db239f3488626df4173c05beafd161d46e",
        "nokogiri-1.18.9-arm-linux-musl": "935605e14c0ba17da18d203922440bf6c0676c602659278d855d4622d756a324",
        "nokogiri-1.18.9-arm64-darwin": "eea3f1f06463ff6309d3ff5b88033c4948d0da1ab3cc0a3a24f63c4d4a763979",
        "nokogiri-1.18.9-x86_64-linux-gnu": "b52f5defedc53d14f71eeaaf990da66b077e1918a2e13088b6a96d0230f44360",
        "nokogiri-1.18.9-x86_64-linux-musl": "e69359d6240c17e64cc9f43970d54f13bfc7b8cc516b819228f687e953425e69",
        "orm_adapter-0.5.0": "aa5d0be5d540cbb46d3a93e88061f4ece6a25f6e97d6a47122beb84fe595e9b9",
        "ostruct-0.6.3": "95a2ed4a4bd1d190784e666b47b2d3f078e4a9efda2fccf18f84ddc6538ed912",
        "parallel-1.27.0": "4ac151e1806b755fb4e2dc2332cbf0e54f2e24ba821ff2d3dcf86bf6dc4ae130",
        "parser-3.3.9.0": "94d6929354b1a6e3e1f89d79d4d302cc8f5aa814431a6c9c7e0623335d7687f2",
        "pp-0.6.2": "947ec3120c6f92195f8ee8aa25a7b2c5297bb106d83b41baa02983686577b6ff",
        "prettyprint-0.2.0": "2bc9e15581a94742064a3cc8b0fb9d45aae3d03a1baa6ef80922627a0766f193",
        "prism-1.4.0": "dc0e3e00e93160213dc2a65519d9002a4a1e7b962db57d444cf1a71565bb703e",
        "propshaft-1.2.1": "e9b91daf52f21152f851a59f8621af53ffb4dc4401f9b5f8fe16065190b98654",
        "psych-5.2.6": "814328aa5dcb6d604d32126a20bc1cbcf05521a5b49dbb1a8b30a07e580f316e",
        "public_suffix-6.0.2": "bfa7cd5108066f8c9602e0d6d4114999a5df5839a63149d3e8b0f9c1d3558394",
        "puma-6.6.1": "b9b56e4a4ea75d1bfa6d9e1972ee2c9f43d0883f011826d914e8e37b3694ea1e",
        "raabro-1.4.0": "d4fa9ff5172391edb92b242eed8be802d1934b1464061ae5e70d80962c5da882",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "rack-3.2.0": "79cd21514d696c59d61fae02e62900f087aac2d053fdc77d45f4e91b94fb3612",
        "rack-session-2.1.1": "0b6dc07dea7e4b583f58a48e8b806d4c9f1c6c9214ebc202ec94562cbea2e4e9",
        "rack-test-2.2.0": "005a36692c306ac0b4a9350355ee080fd09ddef1148a5f8b2ac636c720f5c463",
        "rackup-2.2.1": "f737191fd5c5b348b7f0a4412a3b86383f88c43e13b8217b63d4c8d90b9e798d",
        "rails-8.0.2.1": "13ab95615569e74e364384b346b1d83e4795dbde83d9edf584e8768e8049b3ac",
        "rails-dom-testing-2.3.0": "8acc7953a7b911ca44588bf08737bc16719f431a1cc3091a292bca7317925c1d",
        "rails-html-sanitizer-1.6.2": "35fce2ca8242da8775c83b6ba9c1bcaad6751d9eb73c1abaa8403475ab89a560",
        "railties-8.0.2.1": "54e40e1771fc2878f572d5a4e076cddb057ba8d4d471f8b7d9bfc61bc1301d4c",
        "rainbow-3.1.1": "039491aa3a89f42efa1d6dec2fc4e62ede96eb6acd95e52f1ad581182b79bc6a",
        "rake-13.3.0": "96f5092d786ff412c62fde76f793cc0541bd84d2eb579caa529aa8a059934493",
        "rdoc-6.14.2": "9fdd44df130f856ae70cc9a264dfd659b9b40de369b16581f4ab746e42439226",
        "regexp_parser-2.11.2": "5e5e9c1485ffd8de53ab1d2807affd81f617f72967dfc64fc75a69e2cbf0ff98",
        "reline-0.6.2": "1dad26a6008872d59c8e05244b119347c9f2ddaf4a53dce97856cd5f30a02846",
        "responders-3.1.1": "92f2a87e09028347368639cfb468f5fefa745cb0dc2377ef060db1cdd79a341a",
        "rexml-3.4.1": "c74527a9a0a04b4ec31dbe0dc4ed6004b960af943d8db42e539edde3a871abca",
        "rubocop-1.79.2": "d3f42a7d197952c2a163719c5462fea827710a435b18bfb7070c6eedd2e90391",
        "rubocop-ast-1.46.0": "0da7f6ad5b98614f89b74f11873c191059c823eae07d6ffd40a42a3338f2232b",
        "rubocop-performance-1.25.0": "6f7d03568a770054117a78d0a8e191cefeffb703b382871ca7743831b1a52ec1",
        "rubocop-rails-2.33.3": "848c011b58c1292f3066246c9eb18abf6ffcfbce28bc57c4ab888bbec79af74b",
        "rubocop-rails-omakase-1.1.0": "2af73ac8ee5852de2919abbd2618af9c15c19b512c4cfc1f9a5d3b6ef009109d",
        "ruby-progressbar-1.13.0": "80fc9c47a9b640d6834e0dc7b3c94c9df37f08cb072b7761e4a71e22cff29b33",
        "rubyzip-3.0.1": "8bbbf32ff93db9a156ce2626820e748e2913352e6df80d764d0eea1ed1f5b8a7",
        "securerandom-0.4.1": "cc5193d414a4341b6e225f0cb4446aceca8e50d5e1888743fac16987638ea0b1",
        "selenium-webdriver-4.35.0": "6fc920cec4b9e6263afeb4941289d8deb0853acbc49e0d6f7de91c86986d359b",
        "solid_cable-3.0.12": "a168a54731a455d5627af48d8441ea3b554b8c1f6e6cd6074109de493e6b0460",
        "solid_cache-1.0.7": "58e690ccee057be7351f21b1940d5f9cf6bb132074316e70478e554a79e6a490",
        "solid_queue-1.2.1": "7976b3690a08080ef63d1b11281f0b77398f7697dbeda0e2c5532682639d4b15",
        "sqlite3-2.7.3-aarch64-linux-gnu": "00bab7e2ceb7e911b0a2c516bcb9ec0aa7ee57b9b231419e1788515319ac4317",
        "sqlite3-2.7.3-aarch64-linux-musl": "035dca6c5bc0f45bb059f33cf774e96462563e460a2d5bd48972562bf3a78c8b",
        "sqlite3-2.7.3-arm-linux-gnu": "c22a2593a8274cba5fc55be415cfddab3ff5d3275b5a78878daf214bf2a60db1",
        "sqlite3-2.7.3-arm-linux-musl": "e735bea1c81eceff2e1b3388e6bccbcbf5c81405f7dbd69b5c80b3b4c4a92c89",
        "sqlite3-2.7.3-arm64-darwin": "133772f4312a9d0fa0c16aab7c2abdda2ee93f47dded0f353a2981f7b9d2b9b4",
        "sqlite3-2.7.3-x86_64-linux-gnu": "11b2612fddf56602d238be7a984fa0633e591edd034f7520747bc0927b7fa865",
        "sqlite3-2.7.3-x86_64-linux-musl": "4307278661bbe0a619da7a5da25f4417f6826246ee7b4a56a5c10c3731d5256a",
        "sshkit-1.24.0": "9597c1f984778ae9742f2dc839778d57a6a2efb868107046575c52ac7c628e6c",
        "stimulus-rails-1.3.4": "765676ffa1f33af64ce026d26b48e8ffb2e0b94e0f50e9119e11d6107d67cb06",
        "stringio-3.1.7": "5b78b7cb242a315fb4fca61a8255d62ec438f58da2b90be66048546ade4507fa",
        "tailwindcss-rails-4.3.0": "1e7bf788b8724ba76fec7c43c151a8bca2a39f5d52484aef867f75322df3a6d5",
        "tailwindcss-ruby-4.1.12": "cdb8ffbeedc8292e311c3a450d471e159c126998c562c8b89e608d679c1d7c7c",
        "tailwindcss-ruby-4.1.12-aarch64-linux-gnu": "dd0b6f27047ba629fd2b61a03af1b4386371f864e98448484174769ec9f525d2",
        "tailwindcss-ruby-4.1.12-aarch64-linux-musl": "caf51ec991fe46c296e3c007ead867f94d7f35a8b818754d242d4e5e7307b69a",
        "tailwindcss-ruby-4.1.12-arm64-darwin": "f3abed1f9d8746472be9e1b41b34ee161c7170052f7faf77e919f403aa53c520",
        "tailwindcss-ruby-4.1.12-x86_64-linux-gnu": "065315e6083bd4b1bf2512fc4aebe737ea5e5063a77a9c4e7f1b864fb8d8c481",
        "tailwindcss-ruby-4.1.12-x86_64-linux-musl": "510c412cd7b71db0f14e42fa124d4d17fbf18e4bb693602611eba4ea93cdb738",
        "thor-1.4.0": "8763e822ccb0f1d7bee88cde131b19a65606657b847cc7b7b4b82e772bcd8a3d",
        "thruster-0.1.15": "fe3396aa7158c32f499d8b7df07aefc0070050666a171788aec412705b438eab",
        "thruster-0.1.15-aarch64-linux": "bd55cf486e14ce0484c86a10b04a470da0463efc0dea2f495e49c0ac40d085df",
        "thruster-0.1.15-arm64-darwin": "d340f3b361054123646912dd1833c8929732e1194d8f4d0305dcfb0e0017b289",
        "thruster-0.1.15-x86_64-linux": "a979a3e493c111940723c08c3b7b3b6f95c5d44af26fe65b6edae1f96fc0deda",
        "timeout-0.4.3": "9509f079b2b55fe4236d79633bd75e34c1c1e7e3fb4b56cb5fda61f80a0fe30e",
        "turbo-rails-2.0.16": "d24e1b60f0c575b3549ecda967e5391027143f8220d837ed792c8d48ea0ea38d",
        "tzinfo-2.0.6": "8daf828cc77bcf7d63b0e3bdb6caa47e2272dcfaf4fbfe46f8c3a9df087a829b",
        "unicode-display_width-3.1.5": "bf566817855ee7ee3adcf7bace0d5906cb14401417db59193f8a5fcedf02dd4e",
        "unicode-emoji-4.0.4": "2c2c4ef7f353e5809497126285a50b23056cc6e61b64433764a35eff6c36532a",
        "uri-1.0.3": "e9f2244608eea2f7bc357d954c65c910ce0399ca5e18a7a29207ac22d8767011",
        "useragent-0.16.11": "700e6413ad4bb954bb63547fa098dddf7b0ebe75b40cc6f93b8d54255b173844",
        "warden-1.2.9": "46684f885d35a69dbb883deabf85a222c8e427a957804719e143005df7a1efd0",
        "web-console-4.2.1": "e7bcf37a10ea2b4ec4281649d1cee461b32232d0a447e82c786e6841fd22fe20",
        "websocket-1.2.11": "b7e7a74e2410b5e85c25858b26b3322f29161e300935f70a0e0d3c35e0462737",
        "websocket-driver-0.8.0": "ed0dba4b943c22f17f9a734817e808bc84cdce6a7e22045f5315aa57676d4962",
        "websocket-extensions-0.1.5": "1c6ba63092cda343eb53fc657110c71c754c56484aad42578495227d717a8241",
        "xpath-3.2.0": "6dfda79d91bb3b949b947ecc5919f042ef2f399b904013eb3ef6d20dd3a4082e",
        "zeitwerk-2.7.3": "b2e86b4a9b57d26ba68a15230dcc7fe6f040f06831ce64417b0621ad96ba3e85",
    },
    gemfile = "//people_tracker:Gemfile",
    gemfile_lock = "//people_tracker:Gemfile.lock",
)
use_repo(
    ruby,
    "people_tracker_bundle",
    "root_bundle",
    "ruby",
    "ruby_toolchains",
)

register_toolchains("@ruby_toolchains//:all")
