module(
    name = "rails_example",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.27.0",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.2",
)
bazel_dep(name = "rules_multitool", version = "1.7.0")
bazel_dep(name = "rules_ruby", version = "0.0.0")
local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

bazel_dep(
    name = "bazel_env.bzl",
    version = "0.5.0",
    dev_dependency = True,
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    rv_checksums = {
        "linux-arm64": "0c08c35a99f10817643d548f98012268c5433ae25a737ab4d6751336108a941d",
        "linux-x86_64": "f36cef10365d370e0867f0c3ac36e457a26ab04f3cfbbd7edb227a18e6e9b3c3",
        "macos-arm64": "cd9d7a1428076bfcc6c2ca3c0eb69b8e671e9b48afb4c351fa4a84927841ffef",
        "macos-x86_64": "e9da39082d1dd8502d322c850924d929bc45b7a1e35da593a5606c00673218d4",
    },
    rv_version = "20251225",
    version_file = "//:.ruby-version",
)
ruby.bundle_fetch(
    name = "root_bundle",
    # Exclude default gems with C extensions as listed at
    # https://stdgems.org/<ruby-version> (e.g, https://stdgems.org/3.4.8 for
    # Ruby 3.4.8) - these are pre-compiled in rv-ruby with portable
    # dependencies. Bundled gems are NOT excluded because bundler needs to
    # install them normally.
    #
    # IMPORTANT: These gems must be pinned in your Gemfile, as well.
    excluded_gems = [
        "date",
        "digest",
        "etc",
        "fcntl",
        "fiddle",
        "io-console",
        "io-nonblock",
        "io-wait",
        "json",
        "openssl",
        "pathname",
        "prism",
        "psych",
        "stringio",
        "strscan",
        "zlib",
    ],
    gem_checksums = {
        "action_text-trix-2.1.16": "f645a2c21821b8449fd1d6770708f4031c91a2eedf9ef476e9be93c64e703a8a",
        "actioncable-8.1.1": "7262307e9693f09b299e281590110ce4b6ba7e4e4cee6da4b9d987eaf56f9139",
        "actionmailbox-8.1.1": "aa99703a9b2fa32c5a4a93bb21fef79e2935d8db4d1fd5ef0772847be5d43205",
        "actionmailer-8.1.1": "45755d7d4561363490ae82b17a5919bdef4dfe3bb400831819947c3a1d82afdf",
        "actionpack-8.1.1": "192e27c39a63c7d801ac7b6d50505f265e389516985eed9b2ee364896a6a06d7",
        "actiontext-8.1.1": "fd8d8da1e6bc0b04ff72fccfd127e78431238a99a82e736c7b52727c576a7640",
        "actionview-8.1.1": "ca480c8b099dea0862b0934f24182b84c2d29092e7dbf464fb3e6d4eb9b468dc",
        "activejob-8.1.1": "94f438a9f3b5a6b130fef53d8313f869dbd379309e7d639891bda36b12509383",
        "activemodel-8.1.1": "8b7e2496b9e333ced06248c16a43217b950192c98e0fe3aa117eee21501c6fbd",
        "activerecord-8.1.1": "e32c3a03e364fd803498eb4150c21bedc995aa83bc27122a94d480ab1dcb3d17",
        "activestorage-8.1.1": "bc01d8b4c55e309a0a2e218bfe502c382c9f232e28b1f4b0adc9d8719d2bf28d",
        "activesupport-8.1.1": "5e92534e8d0c8b8b5e6b16789c69dbea65c1d7b752269f71a39422e9546cea67",
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "bigdecimal-4.0.1": "8b07d3d065a9f921c80ceaea7c9d4ae596697295b584c296fe599dd0ad01c4a7",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "concurrent-ruby-1.3.6": "6b56837e1e7e5292f9864f34b69c5a2cbc75c0cf5338f1ce9903d10fa762d5ab",
        "connection_pool-3.0.2": "33fff5ba71a12d2aa26cb72b1db8bba2a1a01823559fb01d29eb74c286e62e0a",
        "crass-1.0.6": "dc516022a56e7b3b156099abc81b6d2b08ea1ed12676ac7a5657617f012bd45d",
        "drb-2.2.3": "0b00d6fdb50995fe4a45dea13663493c841112e4068656854646f418fda13373",
        "erb-6.0.1": "28ecdd99c5472aebd5674d6061e3c6b0a45c049578b071e5a52c2a7f13c197e5",
        "erubi-1.13.1": "a082103b0885dbc5ecf1172fede897f9ebdb745a4b97a5e8dc63953db1ee4ad9",
        "globalid-1.3.0": "05c639ad6eb4594522a0b07983022f04aa7254626ab69445a0e493aa3786ff11",
        "i18n-1.14.8": "285778639134865c5e0f6269e0b818256017e8cde89993fdfcbfb64d088824a5",
        "irb-1.16.0": "2abe56c9ac947cdcb2f150572904ba798c1e93c890c256f8429981a7675b0806",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "loofah-2.25.0": "df5ed7ac3bac6a4ec802df3877ee5cc86d027299f8952e6243b3dac446b060e6",
        "mail-2.9.0": "6fa6673ecd71c60c2d996260f9ee3dd387d4673b8169b502134659ece6d34941",
        "marcel-1.1.0": "fdcfcfa33cc52e93c4308d40e4090a5d4ea279e160a7f6af988260fa970e0bee",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "minitest-6.0.1": "7854c74f48e2e975969062833adc4013f249a4b212f5e7b9d5c040bf838d54bb",
        "net-imap-0.6.2": "08caacad486853c61676cca0c0c47df93db02abc4a8239a8b67eb0981428acc6",
        "net-pop-0.1.2": "848b4e982013c15b2f0382792268763b748cce91c9e91e36b0f27ed26420dff3",
        "net-protocol-0.2.2": "aa73e0cba6a125369de9837b8d8ef82a61849360eba0521900e2c3713aa162a8",
        "net-smtp-0.5.1": "ed96a0af63c524fceb4b29b0d352195c30d82dd916a42f03c62a3a70e5b70736",
        "nio4r-2.7.5": "6c90168e48fb5f8e768419c93abb94ba2b892a1d0602cb06eef16d8b7df1dca1",
        "nokogiri-1.19.0-aarch64-linux-gnu": "11a97ecc3c0e7e5edcf395720b10860ef493b768f6aa80c539573530bc933767",
        "nokogiri-1.19.0-aarch64-linux-musl": "eb70507f5e01bc23dad9b8dbec2b36ad0e61d227b42d292835020ff754fb7ba9",
        "nokogiri-1.19.0-arm-linux-gnu": "572a259026b2c8b7c161fdb6469fa2d0edd2b61cd599db4bbda93289abefbfe5",
        "nokogiri-1.19.0-arm-linux-musl": "23ed90922f1a38aed555d3de4d058e90850c731c5b756d191b3dc8055948e73c",
        "nokogiri-1.19.0-arm64-darwin": "0811dfd936d5f6dd3f6d32ef790568bf29b2b7bead9ba68866847b33c9cf5810",
        "nokogiri-1.19.0-x86_64-darwin": "1dad56220b603a8edb9750cd95798bffa2b8dd9dd9aa47f664009ee5b43e3067",
        "nokogiri-1.19.0-x86_64-linux-gnu": "f482b95c713d60031d48c44ce14562f8d2ce31e3a9e8dd0ccb131e9e5a68b58c",
        "nokogiri-1.19.0-x86_64-linux-musl": "1c4ca6b381622420073ce6043443af1d321e8ed93cc18b08e2666e5bd02ffae4",
        "pp-0.6.3": "2951d514450b93ccfeb1df7d021cae0da16e0a7f95ee1e2273719669d0ab9df6",
        "prettyprint-0.2.0": "2bc9e15581a94742064a3cc8b0fb9d45aae3d03a1baa6ef80922627a0766f193",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "rack-3.2.4": "5d74b6f75082a643f43c1e76b419c40f0e5527fcfee1e669ac1e6b73c0ccb6f6",
        "rack-session-2.1.1": "0b6dc07dea7e4b583f58a48e8b806d4c9f1c6c9214ebc202ec94562cbea2e4e9",
        "rack-test-2.2.0": "005a36692c306ac0b4a9350355ee080fd09ddef1148a5f8b2ac636c720f5c463",
        "rackup-2.3.1": "6c79c26753778e90983761d677a48937ee3192b3ffef6bc963c0950f94688868",
        "rails-8.1.1": "877509b7aef309239978685883097d2c03e21383a50a3f78882cf9b3b5c136f7",
        "rails-dom-testing-2.3.0": "8acc7953a7b911ca44588bf08737bc16719f431a1cc3091a292bca7317925c1d",
        "rails-html-sanitizer-1.6.2": "35fce2ca8242da8775c83b6ba9c1bcaad6751d9eb73c1abaa8403475ab89a560",
        "railties-8.1.1": "fb0c7038b147bea41bf6697fa443ff1c5c47d3bb1eedd9ecf1bceeb90efcb868",
        "rake-13.3.1": "8c9e89d09f66a26a01264e7e3480ec0607f0c497a861ef16063604b1b08eb19c",
        "rdoc-7.0.3": "dfe3d0981d19b7bba71d9dbaeb57c9f4e3a7a4103162148a559c4fc687ea81f9",
        "reline-0.6.3": "1198b04973565b36ec0f11542ab3f5cfeeec34823f4e54cebde90968092b1835",
        "securerandom-0.4.1": "cc5193d414a4341b6e225f0cb4446aceca8e50d5e1888743fac16987638ea0b1",
        "thor-1.4.0": "8763e822ccb0f1d7bee88cde131b19a65606657b847cc7b7b4b82e772bcd8a3d",
        "timeout-0.6.0": "6d722ad619f96ee383a0c557ec6eb8c4ecb08af3af62098a0be5057bf00de1af",
        "tsort-0.2.0": "9650a793f6859a43b6641671278f79cfead60ac714148aabe4e3f0060480089f",
        "tzinfo-2.0.6": "8daf828cc77bcf7d63b0e3bdb6caa47e2272dcfaf4fbfe46f8c3a9df087a829b",
        "uri-1.1.1": "379fa58d27ffb1387eaada68c749d1426738bd0f654d812fcc07e7568f5c57c6",
        "useragent-0.16.11": "700e6413ad4bb954bb63547fa098dddf7b0ebe75b40cc6f93b8d54255b173844",
        "websocket-driver-0.8.0": "ed0dba4b943c22f17f9a734817e808bc84cdce6a7e22045f5315aa57676d4962",
        "websocket-extensions-0.1.5": "1c6ba63092cda343eb53fc657110c71c754c56484aad42578495227d717a8241",
        "zeitwerk-2.7.4": "2bef90f356bdafe9a6c2bd32bcd804f83a4f9b8bc27f3600fff051eb3edcec8b",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
ruby.bundle_fetch(
    name = "people_tracker_bundle",
    # Exclude default gems with C extensions as listed at
    # https://stdgems.org/<ruby-version> (e.g, https://stdgems.org/3.4.8 for
    # Ruby 3.4.8) - these are pre-compiled in rv-ruby with portable
    # dependencies. Bundled gems are NOT excluded because bundler needs to
    # install them normally.
    #
    # IMPORTANT: These gems must be pinned in your Gemfile, as well.
    excluded_gems = [
        "date",
        "digest",
        "etc",
        "fcntl",
        "fiddle",
        "io-console",
        "io-nonblock",
        "io-wait",
        "json",
        "openssl",
        "pathname",
        "prism",
        "psych",
        "stringio",
        "strscan",
        "zlib",
    ],
    gem_checksums = {
        "actioncable-8.0.4": "aadb2bf2977b666cfeaa7dee66fd50e147559f78a8d55f6169e913502475e09f",
        "actionmailbox-8.0.4": "ed0b634a502fb63d1ba01ae025772e9d0261b7ba12e66389c736fcf4635cd80f",
        "actionmailer-8.0.4": "3b9270d8e19f0afb534b11c52f439937dc30028adcbbae2b244f3383ce75de4b",
        "actionpack-8.0.4": "0364c7582f32c8f404725fa30d3f6853f834c5f4964afd4a072b848c8a23cddb",
        "actiontext-8.0.4": "40b3970268ac29b865685456b2586df5052d068fd0cb04acb2291e737cea2340",
        "actionview-8.0.4": "5bd3c41ee7a59e14cf062bb5e4ee53c9a253d12fc13c8754cae368012e1a1648",
        "activejob-8.0.4": "cbc8a85d0e168cb90a5629c8a36fe2d08ba840103d3aed3eee0c7beb784fccce",
        "activemodel-8.0.4": "8f4e4fac3cd104b1bf30419c3745206f6f724c0e2902a939b4113f4c90730dfd",
        "activerecord-8.0.4": "bda32c171799e5ca5460447d3b7272ed14447244e2497abf2107f87fc44cbf32",
        "activestorage-8.0.4": "47f312962fc898c1669f20cf7448d19668a5547f4a5f64e59a837d9d3f64a043",
        "activesupport-8.0.4": "894a3a6c7733b5fae5a7df3acd76c4b563f38687df8a04fa3cbd25360f3fe95a",
        "addressable-2.8.8": "7c13b8f9536cf6364c03b9d417c19986019e28f7c00ac8132da4eb0fe393b057",
        "ast-2.4.3": "954615157c1d6a382bc27d690d973195e79db7f55e9765ac7c481c60bdb4d383",
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "bcrypt-3.1.21": "5964613d750a42c7ee5dc61f7b9336fb6caca429ba4ac9f2011609946e4a2dcf",
        "bcrypt_pbkdf-1.1.2": "c2414c23ce66869b3eb9f643d6a3374d8322dfb5078125c82792304c10b94cf6",
        "benchmark-0.5.0": "465df122341aedcb81a2a24b4d3bd19b6c67c1530713fd533f3ff034e419236c",
        "bigdecimal-4.0.1": "8b07d3d065a9f921c80ceaea7c9d4ae596697295b584c296fe599dd0ad01c4a7",
        "bindex-0.8.1": "7b1ecc9dc539ed8bccfc8cb4d2732046227b09d6f37582ff12e50a5047ceb17e",
        "bootsnap-1.20.1": "7ad62cda65c5157bcca0acfcc0ee11fcbb83d7d7a8a72d52ccd85e6ffc130b93",
        "brakeman-7.1.2": "6b04927710a2e7d13a72248b5d404c633188e02417f28f3d853e4b6370d26dce",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "cancancan-3.6.1": "975c1d5cbf58d5df48a9452a7f61ae3d254608cd87570402f5925a8864c56b62",
        "capybara-3.40.0": "42dba720578ea1ca65fd7a41d163dd368502c191804558f6e0f71b391054aeef",
        "concurrent-ruby-1.3.6": "6b56837e1e7e5292f9864f34b69c5a2cbc75c0cf5338f1ce9903d10fa762d5ab",
        "connection_pool-3.0.2": "33fff5ba71a12d2aa26cb72b1db8bba2a1a01823559fb01d29eb74c286e62e0a",
        "crass-1.0.6": "dc516022a56e7b3b156099abc81b6d2b08ea1ed12676ac7a5657617f012bd45d",
        "debug-1.11.1": "2e0b0ac6119f2207a6f8ac7d4a73ca8eb4e440f64da0a3136c30343146e952b6",
        "devise-4.9.4": "920042fe5e704c548aa4eb65ebdd65980b83ffae67feb32c697206bfd975a7f8",
        "dotenv-3.2.0": "e375b83121ea7ca4ce20f214740076129ab8514cd81378161f11c03853fe619d",
        "drb-2.2.3": "0b00d6fdb50995fe4a45dea13663493c841112e4068656854646f418fda13373",
        "ed25519-1.4.0": "16e97f5198689a154247169f3453ef4cfd3f7a47481fde0ae33206cdfdcac506",
        "erb-6.0.1": "28ecdd99c5472aebd5674d6061e3c6b0a45c049578b071e5a52c2a7f13c197e5",
        "erubi-1.13.1": "a082103b0885dbc5ecf1172fede897f9ebdb745a4b97a5e8dc63953db1ee4ad9",
        "et-orbi-1.4.0": "6c7e3c90779821f9e3b324c5e96fda9767f72995d6ae435b96678a4f3e2de8bc",
        "fugit-1.12.1": "5898f478ede9b415f0804e42b8f3fd53f814bd85eebffceebdbc34e1107aaf68",
        "globalid-1.3.0": "05c639ad6eb4594522a0b07983022f04aa7254626ab69445a0e493aa3786ff11",
        "i18n-1.14.8": "285778639134865c5e0f6269e0b818256017e8cde89993fdfcbfb64d088824a5",
        "importmap-rails-2.2.2": "729f5b1092f832780829ade1d0b46c7e53d91c556f06da7254da2977e93fe614",
        "irb-1.16.0": "2abe56c9ac947cdcb2f150572904ba798c1e93c890c256f8429981a7675b0806",
        "jbuilder-2.14.1": "4eb26376ff60ef100cb4fd6fd7533cd271f9998327e86adf20fd8c0e69fabb42",
        "kamal-2.10.1": "53b7ecb4c33dd83b1aedfc7aacd1c059f835993258a552d70d584c6ce32b6340",
        "language_server-protocol-3.17.0.5": "fd1e39a51a28bf3eec959379985a72e296e9f9acfce46f6a79d31ca8760803cc",
        "lint_roller-1.1.0": "2c0c845b632a7d172cb849cc90c1bce937a28c5c8ccccb50dfd46a485003cc87",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "loofah-2.25.0": "df5ed7ac3bac6a4ec802df3877ee5cc86d027299f8952e6243b3dac446b060e6",
        "mail-2.9.0": "6fa6673ecd71c60c2d996260f9ee3dd387d4673b8169b502134659ece6d34941",
        "marcel-1.1.0": "fdcfcfa33cc52e93c4308d40e4090a5d4ea279e160a7f6af988260fa970e0bee",
        "matrix-0.4.3": "a0d5ab7ddcc1973ff690ab361b67f359acbb16958d1dc072b8b956a286564c5b",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "minitest-5.27.0": "2d3b17f8a36fe7801c1adcffdbc38233b938eb0b4966e97a6739055a45fa77d5",
        "msgpack-1.8.0": "e64ce0212000d016809f5048b48eb3a65ffb169db22238fb4b72472fecb2d732",
        "net-imap-0.6.2": "08caacad486853c61676cca0c0c47df93db02abc4a8239a8b67eb0981428acc6",
        "net-pop-0.1.2": "848b4e982013c15b2f0382792268763b748cce91c9e91e36b0f27ed26420dff3",
        "net-protocol-0.2.2": "aa73e0cba6a125369de9837b8d8ef82a61849360eba0521900e2c3713aa162a8",
        "net-scp-4.1.0": "a99b0b92a1e5d360b0de4ffbf2dc0c91531502d3d4f56c28b0139a7c093d1a5d",
        "net-sftp-4.0.0": "65bb91c859c2f93b09826757af11b69af931a3a9155050f50d1b06d384526364",
        "net-smtp-0.5.1": "ed96a0af63c524fceb4b29b0d352195c30d82dd916a42f03c62a3a70e5b70736",
        "net-ssh-7.3.0": "172076c4b30ce56fb25a03961b0c4da14e1246426401b0f89cba1a3b54bf3ef0",
        "nio4r-2.7.5": "6c90168e48fb5f8e768419c93abb94ba2b892a1d0602cb06eef16d8b7df1dca1",
        "nokogiri-1.19.0-aarch64-linux-gnu": "11a97ecc3c0e7e5edcf395720b10860ef493b768f6aa80c539573530bc933767",
        "nokogiri-1.19.0-aarch64-linux-musl": "eb70507f5e01bc23dad9b8dbec2b36ad0e61d227b42d292835020ff754fb7ba9",
        "nokogiri-1.19.0-arm-linux-gnu": "572a259026b2c8b7c161fdb6469fa2d0edd2b61cd599db4bbda93289abefbfe5",
        "nokogiri-1.19.0-arm-linux-musl": "23ed90922f1a38aed555d3de4d058e90850c731c5b756d191b3dc8055948e73c",
        "nokogiri-1.19.0-arm64-darwin": "0811dfd936d5f6dd3f6d32ef790568bf29b2b7bead9ba68866847b33c9cf5810",
        "nokogiri-1.19.0-x86_64-linux-gnu": "f482b95c713d60031d48c44ce14562f8d2ce31e3a9e8dd0ccb131e9e5a68b58c",
        "nokogiri-1.19.0-x86_64-linux-musl": "1c4ca6b381622420073ce6043443af1d321e8ed93cc18b08e2666e5bd02ffae4",
        "orm_adapter-0.5.0": "aa5d0be5d540cbb46d3a93e88061f4ece6a25f6e97d6a47122beb84fe595e9b9",
        "ostruct-0.6.3": "95a2ed4a4bd1d190784e666b47b2d3f078e4a9efda2fccf18f84ddc6538ed912",
        "parallel-1.27.0": "4ac151e1806b755fb4e2dc2332cbf0e54f2e24ba821ff2d3dcf86bf6dc4ae130",
        "parser-3.3.10.0": "ce3587fa5cc55a88c4ba5b2b37621b3329aadf5728f9eafa36bbd121462aabd6",
        "pp-0.6.3": "2951d514450b93ccfeb1df7d021cae0da16e0a7f95ee1e2273719669d0ab9df6",
        "prettyprint-0.2.0": "2bc9e15581a94742064a3cc8b0fb9d45aae3d03a1baa6ef80922627a0766f193",
        "propshaft-1.3.1": "9acc664ef67e819ffa3d95bd7ad4c3623ea799110c5f4dee67fa7e583e74c392",
        "public_suffix-7.0.0": "f7090b5beb0e56f9f10d79eed4d5fbe551b3b425da65877e075dad47a6a1b095",
        "puma-7.1.0": "e45c10cb124f224d448c98db653a75499794edbecadc440ad616cf50f2fd49dd",
        "raabro-1.4.0": "d4fa9ff5172391edb92b242eed8be802d1934b1464061ae5e70d80962c5da882",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "rack-3.2.4": "5d74b6f75082a643f43c1e76b419c40f0e5527fcfee1e669ac1e6b73c0ccb6f6",
        "rack-session-2.1.1": "0b6dc07dea7e4b583f58a48e8b806d4c9f1c6c9214ebc202ec94562cbea2e4e9",
        "rack-test-2.2.0": "005a36692c306ac0b4a9350355ee080fd09ddef1148a5f8b2ac636c720f5c463",
        "rackup-2.3.1": "6c79c26753778e90983761d677a48937ee3192b3ffef6bc963c0950f94688868",
        "rails-8.0.4": "364494a32d2dc3f9d5c135d036ce47e7776684bc6add73f1037ac2b1007962db",
        "rails-dom-testing-2.3.0": "8acc7953a7b911ca44588bf08737bc16719f431a1cc3091a292bca7317925c1d",
        "rails-html-sanitizer-1.6.2": "35fce2ca8242da8775c83b6ba9c1bcaad6751d9eb73c1abaa8403475ab89a560",
        "railties-8.0.4": "8203d853dcffab4abcdd05c193f101676a92068075464694790f6d8f72d5cb47",
        "rainbow-3.1.1": "039491aa3a89f42efa1d6dec2fc4e62ede96eb6acd95e52f1ad581182b79bc6a",
        "rake-13.3.1": "8c9e89d09f66a26a01264e7e3480ec0607f0c497a861ef16063604b1b08eb19c",
        "rdoc-7.0.3": "dfe3d0981d19b7bba71d9dbaeb57c9f4e3a7a4103162148a559c4fc687ea81f9",
        "regexp_parser-2.11.3": "ca13f381a173b7a93450e53459075c9b76a10433caadcb2f1180f2c741fc55a4",
        "reline-0.6.3": "1198b04973565b36ec0f11542ab3f5cfeeec34823f4e54cebde90968092b1835",
        "responders-3.2.0": "89c2d6ac0ae16f6458a11524cae4a8efdceba1a3baea164d28ee9046bd3df55a",
        "rexml-3.4.4": "19e0a2c3425dfbf2d4fc1189747bdb2f849b6c5e74180401b15734bc97b5d142",
        "rubocop-1.82.1": "09f1a6a654a960eda767aebea33e47603080f8e9c9a3f019bf9b94c9cab5e273",
        "rubocop-ast-1.48.0": "22df9bbf3f7a6eccde0fad54e68547ae1e2a704bf8719e7c83813a99c05d2e76",
        "rubocop-performance-1.26.1": "cd19b936ff196df85829d264b522fd4f98b6c89ad271fa52744a8c11b8f71834",
        "rubocop-rails-2.34.2": "10ff246ee48b25ffeabddc5fee86d159d690bb3c7b9105755a9c7508a11d6e22",
        "rubocop-rails-omakase-1.1.0": "2af73ac8ee5852de2919abbd2618af9c15c19b512c4cfc1f9a5d3b6ef009109d",
        "ruby-progressbar-1.13.0": "80fc9c47a9b640d6834e0dc7b3c94c9df37f08cb072b7761e4a71e22cff29b33",
        "rubyzip-3.2.2": "c0ed99385f0625415c8f05bcae33fe649ed2952894a95ff8b08f26ca57ea5b3c",
        "securerandom-0.4.1": "cc5193d414a4341b6e225f0cb4446aceca8e50d5e1888743fac16987638ea0b1",
        "selenium-webdriver-4.39.0": "984a1e63d39472eaf286bac3c6f1822fa7eea6eed9c07a66ce7b3bc5417ba826",
        "solid_cable-3.0.12": "a168a54731a455d5627af48d8441ea3b554b8c1f6e6cd6074109de493e6b0460",
        "solid_cache-1.0.10": "bc05a2fb3ac78a6f43cbb5946679cf9db67dd30d22939ededc385cb93e120d41",
        "solid_queue-1.2.4": "bb60f9552a969ac377d87601b0ff6a088f5e6f20b0cbbe3844a59d022cac0e4b",
        "sqlite3-2.9.0-aarch64-linux-gnu": "cfe1e0216f46d7483839719bf827129151e6c680317b99d7b8fc1597a3e13473",
        "sqlite3-2.9.0-aarch64-linux-musl": "56a35cb2d70779afc2ac191baf2c2148242285ecfed72f9b021218c5c4917913",
        "sqlite3-2.9.0-arm-linux-gnu": "a19a21504b0d7c8c825fbbf37b358ae316b6bd0d0134c619874060b2eef05435",
        "sqlite3-2.9.0-arm-linux-musl": "fca5b26197c70e3363115d3faaea34d7b2ad9c7f5fa8d8312e31b64e7556ee07",
        "sqlite3-2.9.0-arm64-darwin": "a917bd9b84285766ff3300b7d79cd583f5a067594c8c1263e6441618c04a6ed3",
        "sqlite3-2.9.0-x86_64-linux-gnu": "72fff9bd750070ba3af695511ba5f0e0a2d8a9206f84869640b3e99dfaf3d5a5",
        "sqlite3-2.9.0-x86_64-linux-musl": "ef716ba7a66d7deb1ccc402ac3a6d7343da17fac862793b7f0be3d2917253c90",
        "sshkit-1.25.0": "c8c6543cdb60f91f1d277306d585dd11b6a064cb44eab0972827e4311ff96744",
        "stimulus-rails-1.3.4": "765676ffa1f33af64ce026d26b48e8ffb2e0b94e0f50e9119e11d6107d67cb06",
        "tailwindcss-rails-4.4.0": "efa2961351a52acebe616e645a81a30bb4f27fde46cc06ce7688d1cd1131e916",
        "tailwindcss-ruby-4.1.18": "b62fad5b00494e92987ee319dfb5c5ad272f0ed93649963d62f08d2ba0f03fa7",
        "tailwindcss-ruby-4.1.18-aarch64-linux-gnu": "e10f9560bccddbb4955fd535b3bcc8c7071a7df07404dd473a23fa791ec4e46b",
        "tailwindcss-ruby-4.1.18-aarch64-linux-musl": "3c8426674718a2c98a0649c825ac0b3286ff52acd0b4052d7d19126cd74904f3",
        "tailwindcss-ruby-4.1.18-arm64-darwin": "f940531d5a030c566d3d616004235bcd4c361abdd328f7d6c7e3a953a32e0155",
        "tailwindcss-ruby-4.1.18-x86_64-linux-gnu": "e0a2220163246fe0126c5c5bafb95bc6206e7d21fce2a2878fd9c9a359137534",
        "tailwindcss-ruby-4.1.18-x86_64-linux-musl": "d957cf545b09d2db7eb6267450cc1fc589e126524066537a0c4d5b99d701f4b2",
        "thor-1.4.0": "8763e822ccb0f1d7bee88cde131b19a65606657b847cc7b7b4b82e772bcd8a3d",
        "thruster-0.1.17": "6f3f1de43e22f0162d81cbc363f45ee42a1b8460213856c1a899cbf0d3297235",
        "thruster-0.1.17-aarch64-linux": "1b3a34b2814185c2aeaf835b5ecff5348cdcf8e77809f7a092d46e4b962a16ba",
        "thruster-0.1.17-arm64-darwin": "75da66fc4a0f012f9a317f6362f786a3fa953879a3fa6bed8deeaebf1c1d66ec",
        "thruster-0.1.17-x86_64-linux": "77b8f335075bd4ece7631dc84a19a710a1e6e7102cbce147b165b45851bdfcd3",
        "timeout-0.6.0": "6d722ad619f96ee383a0c557ec6eb8c4ecb08af3af62098a0be5057bf00de1af",
        "tsort-0.2.0": "9650a793f6859a43b6641671278f79cfead60ac714148aabe4e3f0060480089f",
        "turbo-rails-2.0.20": "cbcbb4dd3ce59f6471c9f911b1655b2c721998cc8303959d982da347f374ea95",
        "tzinfo-2.0.6": "8daf828cc77bcf7d63b0e3bdb6caa47e2272dcfaf4fbfe46f8c3a9df087a829b",
        "unicode-display_width-3.2.0": "0cdd96b5681a5949cdbc2c55e7b420facae74c4aaf9a9815eee1087cb1853c42",
        "unicode-emoji-4.2.0": "519e69150f75652e40bf736106cfbc8f0f73aa3fb6a65afe62fefa7f80b0f80f",
        "uri-1.1.1": "379fa58d27ffb1387eaada68c749d1426738bd0f654d812fcc07e7568f5c57c6",
        "useragent-0.16.11": "700e6413ad4bb954bb63547fa098dddf7b0ebe75b40cc6f93b8d54255b173844",
        "warden-1.2.9": "46684f885d35a69dbb883deabf85a222c8e427a957804719e143005df7a1efd0",
        "web-console-4.2.1": "e7bcf37a10ea2b4ec4281649d1cee461b32232d0a447e82c786e6841fd22fe20",
        "websocket-1.2.11": "b7e7a74e2410b5e85c25858b26b3322f29161e300935f70a0e0d3c35e0462737",
        "websocket-driver-0.8.0": "ed0dba4b943c22f17f9a734817e808bc84cdce6a7e22045f5315aa57676d4962",
        "websocket-extensions-0.1.5": "1c6ba63092cda343eb53fc657110c71c754c56484aad42578495227d717a8241",
        "xpath-3.2.0": "6dfda79d91bb3b949b947ecc5919f042ef2f399b904013eb3ef6d20dd3a4082e",
        "zeitwerk-2.7.4": "2bef90f356bdafe9a6c2bd32bcd804f83a4f9b8bc27f3600fff051eb3edcec8b",
    },
    gemfile = "//people_tracker:Gemfile",
    gemfile_lock = "//people_tracker:Gemfile.lock",
)
use_repo(
    ruby,
    "people_tracker_bundle",
    "root_bundle",
    "ruby",
    "ruby_toolchains",
)

register_toolchains("@ruby_toolchains//:all")
