load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_binary(
    name = "generate_excluded_gems",
    srcs = ["generate_excluded_gems.sh"],
    data = [
        "@buildifier_prebuilt//buildozer",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:fail",
        "@rules_shell//shell/runfiles",
    ],
)

sh_test(
    name = "generate_excluded_gems_test",
    srcs = ["generate_excluded_gems_test.sh"],
    data = [
        "testdata/default_gems.json",
        "testdata/expected_excluded_gems_output.txt",
        ":generate_excluded_gems",
    ],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
        "@rules_shell//shell/runfiles",
    ],
)

sh_test(
    name = "generate_excluded_gems_integration_test",
    srcs = ["generate_excluded_gems_integration_test.sh"],
    data = [
        "testdata/default_gems.json",
        ":generate_excluded_gems",
    ],
    deps = [
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
        "@rules_shell//shell/runfiles",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
    visibility = ["//:__subpackages__"],
)
